# lynx-ode

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build_test.yml
examples/: harmonicOscillator.cpp  lorenzSystem.cpp  massSpringDamper.cpp  massSpringDamperSystem.cpp
include/common/: Trajectory.h  Trajectory.hpp  Types.h  Types.hpp
include/function/: AbstractFunction.h  FunctionBase.h  Sine.h  sine.h
include/integrator/: ForwardEulerIntegrator.h  IntegratorBase.h
include/ode_integrator/: EulerBackwardIntegrator.h  EulerBackwardIntegrator.hpp  EulerBackwardIntegrator.hxx  EulerForwardIntegrator.h  EulerForwardIntegrator.hpp  EulerForwardIntegrator.hxx  FourthOrderRungeKutta.h  FourthOrderRungeKutta.hpp  FourthOrderRungeKutta.hxx  ODEIntegratorBase.h  ODEIntegratorBase.hpp  ODEIntegratorBase.hxx  SecondOrderRungeKutta.h  SecondOrderRungeKutta.hpp  SecondOrderRungeKutta.hxx
include/ode_solver/: EulerForwardSolver.h  ODESolverBase.h
include/system_dynamics/: LinearSystemDynamics.hpp  MassSpringDamperSystem.h  Sine.h  SpringDamperSystem.h  SystemDynamicsBase.hpp  SystemFlowMapBase.h  SystemFlowMapBase.hpp
src/: main.cpp
src/integrator/: EulerBackwardIntegrator.cpp  ForwardEulerIntegrator.cpp
src/ode_integrator/: EulerBackwardIntegrator.cpp  EulerForwardIntegrator.cpp  FourthOrderRungaKutta.cpp  FourthOrderRungeKutta.cpp  ODEIntegratorBase.cpp  SecondOrderRungeKutta.cpp
